cmake_minimum_required(VERSION 3.12)
project(BinarySearchTree)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(BinarySearchTree_exe main.cpp binary_search_tree.cpp)
target_include_directories(BinarySearchTree_exe PUBLIC )
