cmake_minimum_required(VERSION 3.12)
project(DoublyLinkedList)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(DoublyLinkedList_exe main.cpp doubly_linked_list.cpp)
target_include_directories(DoublyLinkedList_exe PUBLIC )
