cmake_minimum_required(VERSION 3.12)
project(DynamicArray)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(DynamicArray_exe main.cpp dynamic_array.cpp)
target_include_directories(DynamicArray_exe PUBLIC )
